--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color:#FAFAFA;
@@ -94,6 +94,11 @@ ul {
   font-weight: 300;
 }
 
+.title {
+  font-weight: 900;
+  letter-spacing: 2px;
+}
+
 .danger-text {
   color: $accent !important;
 }
@@ -106,7 +111,7 @@ ul {
 .subtle {
   width: 100%;
   max-width: 600px;
-  color: $grey7;
+  color: $grey6;
 }
 
 
