--- a/src/Webbuilder/Dashboard/Settings/SiteIndex.scss
+++ b/src/Webbuilder/Dashboard/Settings/SiteIndex.scss
@@ -37,4 +37,10 @@
   box-shadow: 0px 2px 15px rgba($blue5, 0.4);
 }
 
+.site-preview-window {
+  padding: 0.5em;
+  background-color: $grey1;
+  width: 100%;
+  height: 800px;
+}
 
