--- a/src/components/ToggleStatus/ToggleStatus.scss
+++ b/src/components/ToggleStatus/ToggleStatus.scss
@@ -1,14 +1,14 @@
 @import '../../colours.scss';
 
 .toggle {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   background-color: $grey9;
   margin-right: 0.5em;
   padding: 0.5em;
   border-radius: 20px;
   transition: all 0.2s ease;
-
+  
   &:not(:first-child) {
     margin-left: 0.5em;
 
