fix modal styling

--- a/src/components/ConfirmModal/ConfirmModal.scss
+++ b/src/components/ConfirmModal/ConfirmModal.scss
@@ -19,7 +19,8 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  
+  position: absolute;
+  top: 3em;
   width: 100%;
   max-width: 900px;
   border-radius: 10px;
