setup pricing page

--- a/src/colours.scss
+++ b/src/colours.scss
@@ -18,6 +18,16 @@ $grey7: #9AA5B1;
 $grey8: #CBD2D9;
 $grey9: #E4E7EB;
 $grey10: #F5F7FA;
+$cyan1:#05606E;
+$cyan2: #07818F;
+$cyan3: #099AA4;
+$cyan4: #0FB5BA;
+$cyan5: #1CD4D4;
+$cyan6: #3AE7E1;
+$cyan7: #62F4EB;
+$cyan8: #92FDF2;
+$cyan9: #C1FEF6;
+$cyan10: #E1FCF8; 
 $accent: #DE3A11;
 $orange: #F35627;
 $yellow7: #FADB5F;
