--- a/src/Webbuilder/Static/Static.scss
+++ b/src/Webbuilder/Static/Static.scss
@@ -60,8 +60,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 0.5em;
-  margin: 1em 0;
+  padding: 1em 0.5em;
+}
+
+.static-forms.dark {
+  background-color: darken($grey2, 3%);
+}
+
+.static-forms.light {
+  background-color: darken(white, 3%);
+
 }
 
 .static-intro {
@@ -91,8 +99,14 @@
   margin-top: 3em;
   margin-bottom: 2em;
   >div {
+    width: 100%;
+    max-width: 600px;
     margin: 0.2em;
   }
+}
+
+.static-youtube-item {
+  width: 100%;
 }
 
 .static-wrapper.dark {
@@ -108,5 +122,37 @@
 
   label {
     color: white;
+  }
+}
+
+.static-footer {
+  p,
+  a {
+    color: $grey8;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .static-intro-wrapper {
+    padding: 0.5em;
+    margin-top: 2em;
+    text-align: center;
+    > div {
+      flex-direction: column-reverse;
+    }
+
+    .static-twitter-timeline {
+      margin: 0;
+      margin-top: 2em;
+      width: 100%;
+    }
+  }
+
+  .static-site-name {
+    width: 100%;
+
+    h2 {
+      text-align: center;
+    }
   }
 }
