add some ux an gradients

--- a/src/components/PostFetchComp/PostFetchComp.scss
+++ b/src/components/PostFetchComp/PostFetchComp.scss
@@ -9,6 +9,8 @@
   background-color: white;
   padding: 1em;
   border-radius: 5px;
+  box-shadow: 0px 2px 10px rgba(black, 0.10);
+  margin-bottom: 1em;
 }
 .select__arrow {
   position: absolute;
