--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -1,7 +1,8 @@
 @import '../../colours.scss';
 
 .btn-primary {
-  background-color: hsla(201, 87%, 54%,1);
+  background: rgb(5,82,181);
+background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   color: white;
   padding: 1em;
   font-size: 0.8rem;
@@ -98,6 +99,7 @@
   color: white;
   transition: all 0.2s ease;
   border: none;
+  box-shadow: 0px 2px 10px rgba(black, 0.2);
   &:hover {
     background-color: darken($green, 5%);
     border: none;
@@ -118,8 +120,12 @@
   border: 7px solid #f3f3f3; /* Light grey */
   border-top: 7px solid $grey5; /* Blue */
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  max-width: 90px;
+  max-height: 90px;
+  height: 100%;
+  width: 100%;
+  min-height: 40px;
+  min-width: 40px;
   animation: spin 2s linear infinite;
 }
 
@@ -127,18 +133,15 @@
   border: none;
   height: 50px;
   min-height: 50px;
-  border-radius: 50%;
   width: 50px;
   min-width: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(45deg, rgba(9,103,210,1) 0%, rgba(173,214,255,1) 100%);
   font-size: 1rem;
-  color: white;
+  color: $green;
   margin-left: 1rem;
   align-self: flex-end;
-  box-shadow: 0px 2px 10px rgba(black, 0.3);
   outline: none;
 }
 
