--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -107,3 +107,15 @@
     }
   }
 }
+
+@media screen and (max-width: 748px) {
+  .reading-list-item-header-subheader {
+    .reading-list-author {
+      margin-top: 1em;
+    }
+  }
+
+  .circle-divider {
+    display: none;
+  }
+}
