--- a/src/components/ContactsList/ContactsList.scss
+++ b/src/components/ContactsList/ContactsList.scss
@@ -3,24 +3,49 @@
 .contact-list {
   list-style-type: none;
   width: 100%;
-  max-width: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
 }
 
 .contact-list-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1em;
+  transition: all 0.2s ease;
+  height: 200px;
+  position: relative;
+  width: 300px;
+
+}
+
+.contact-list-item-body {
   border: 1px solid $grey9;
   background-color: white;
   padding: 1em;
-  border-radius: 5px;
-  margin: 0.5em 0;
-  transition: all 0.2s ease;
-  i {
-    font-size: 0.8rem;
-    color: $blue7;
-  }
+  border-radius: 15px;
+  position: absolute;
+  bottom: 0;
+  padding-top: 3.5em;
+  box-shadow: 0px 2px 30px rgba(black, 0.1);
+  width: 100%;
+  height: 150px;
+}
 
-  &:hover {
-    background-color: $grey9;
-    cursor: pointer;
+.contact-item-icon {
+  position: absolute;
+  top: 10px;
+  z-index: 1;
+  i {
+    font-size: 2rem;
+    color: white;
+    padding: 0.9em 1em;
+    background-color: $grey3;
+    border-radius: 50%;
+    box-shadow: 0px 2px 15px rgba(black, 0.2);
+
   }
 }
 
