--- a/src/Pages/About/About.scss
+++ b/src/Pages/About/About.scss
@@ -64,6 +64,22 @@
 
 .about-block-img {
   position: absolute;
-  width: 600px;
+  max-width: 600px;
+  width: 100%;
   height: 100%;
 }
+
+@media screen and (max-width: 768px) {
+  .about-block {
+    height: 500px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .about-block-img {
+    top: 0;
+  }
+  .about-block-body {
+    width: 100%;
+  }
+}
+
