--- a/src/index.scss
+++ b/src/index.scss
@@ -79,6 +79,10 @@ ul {
   font-weight: bold;
   text-decoration: none;
   font-size: 0.8rem;
+
+  &:hover {
+    color: $blue7;
+  }
 }
 
 .highlight-text {
