--- a/src/Pages/HelpPage/HelpPage.scss
+++ b/src/Pages/HelpPage/HelpPage.scss
@@ -28,3 +28,11 @@
     box-shadow: 0px 5px 20px rgba(black, 0.4);
   }
 }
+
+@media screen and (max-width: 425px) {
+  .help-item {
+    i {
+      display: none;
+    }
+  }
+}
