--- a/src/components/ConfirmModal/ConfirmModal.scss
+++ b/src/components/ConfirmModal/ConfirmModal.scss
@@ -42,6 +42,7 @@
   border-radius: 50%;
   background-color: rgba($grey6, 0.2);
   transition: all 0.2s ease;
+  z-index: 99;
   &:hover {
     background-color: white;
     color: $grey3;
