--- a/src/components/SubredditFilters/SubredditFilters.scss
+++ b/src/components/SubredditFilters/SubredditFilters.scss
@@ -1,3 +1,11 @@
+@import '../../colours';
+
+.filters-wrapper {
+  background: $grey10;
+  padding: 0.5em 1em;
+  height: 60px;
+}
+
 @media screen and (max-width: 768px) {
   .filters-wrapper > div {
       flex-direction: column;
