--- a/src/components/SubredditFilters/SubredditFilters.scss
+++ b/src/components/SubredditFilters/SubredditFilters.scss
@@ -3,7 +3,7 @@
 .filters-wrapper {
   background: $grey10;
   padding: 0.5em 1em;
-  height: 60px;
+  min-height: 60px;
 }
 
 @media screen and (max-width: 768px) {
