what follows is trying to fix a bug that can only be found on mobile

--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -1,7 +1,8 @@
 @import '../../colours.scss';
 
 .dashboard-wrapper {
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 .dashboard-inner {
