--- a/src/components/UserInbox/UserInbox.scss
+++ b/src/components/UserInbox/UserInbox.scss
@@ -8,7 +8,8 @@
 .inbox-message-wrapper {
   overflow-y: auto;
   padding: 0 1em;
-  height: calc(100vh - 190px);
+  min-height: calc(100vh - 190px);
+  height: 100%;
 }
 
 .inbox-left-wrapper {
