--- a/src/Webbuilder/Static/modules/SocialBar/SocialBar.scss
+++ b/src/Webbuilder/Static/modules/SocialBar/SocialBar.scss
@@ -1,11 +1,8 @@
 @import '../../../../colours.scss';
 
 .static-social-bar {
-  width: 100%;
-  padding: 1em;
   display: flex;
-  justify-content: center;
-  align-items: center;
+align-items: center;
 }
 
 .static-social-bar.dark {
@@ -16,3 +13,8 @@
   }
 }
 
+@media screen and (max-width: 511px) {
+ .static-social-bar {
+   margin-top: 1em;
+ }
+}
