some style fixes

--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -4,6 +4,8 @@
   min-height: 100vh;
   height: 100%;
   overflow: hidden;
+  position: fixed;
+  width: 100%;
 }
 .dashboard-inner {
   width: 100%;
