--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -50,13 +50,14 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
 .btn-tiertiary {
   color: hsla(211, 12%, 48%,1);
   font-size: 0.7rem;
-
+  font-weight: 700;
   box-shadow: none;
   padding: 1em;
   margin-left: 0.5em;
   border:1.5px solid hsla(211, 12%, 88%,1);
   transition: all 0.2s ease;
-    background-color: white;
+  background-color: white;
+  border-radius: 8px;
   &:hover {
     color: $blue8;
     border:1.5px solid $blue8;
