--- a/src/layouts/DashboardNav/DashboardNav.scss
+++ b/src/layouts/DashboardNav/DashboardNav.scss
@@ -17,7 +17,6 @@
   height: 100%;
   min-height: 100vh;
   background-color: white;
-  overflow: hidden;
   border-right: 1px solid $grey9;
   position: relative;
   bottom: 0;
@@ -71,4 +70,12 @@
   opacity: 0;
   margin-right: 1.5em;
   margin-left:  1em;
+}
+
+@media screen and (max-width: 768px) {
+  .dash-nav {
+    position: fixed;
+    bottom: 0;
+    z-index: 3;
+  }
 }
