--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -3,18 +3,18 @@
 .dashboard-wrapper {
   min-height: 100vh;
   height: 100%;
+  overflow: hidden;
+  position: fixed;
   width: 100%;
-  position: relative;
 }
 .dashboard-inner {
   width: 100%;
-  height: 100%;
-  position: relative;
+  overflow-y: auto;
 }
 .dashboard-page-wrapper {
   transition: all 0.2s ease;
   padding: 2em 2em 0 2em;
-  min-width: 288px;
+      min-width: 288px;
 
 }
 
@@ -36,4 +36,12 @@
   .m\+ {
     margin: 0.5em !important;
   }
+}
+@media screen and (min-width: 769px) {
+  .dashboard-wrapper {
+    overflow: hidden;
+  position: fixed;
+  width: 100%;
+  }
+  
 }
