--- a/src/layouts/DashboardTopbar/DashboardTopbar.scss
+++ b/src/layouts/DashboardTopbar/DashboardTopbar.scss
@@ -42,7 +42,7 @@
 
 @media screen and (max-width: 768px) {
   .dashboard-topbar {
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 3;
   }
