--- a/src/Pages/AccountPage/AccountPage.scss
+++ b/src/Pages/AccountPage/AccountPage.scss
@@ -11,13 +11,12 @@
 }
 .default-message-input {
   display: block;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Muli', sans-serif;
   width: 100%;
   height: 300px;
-  border: 1px solid $grey8;
   border-radius: 5px;
   padding: 0.5em;
-  color: $grey4;
+  color: var(--secondary);
   resize: vertical;
 
   &::placeholder {
