--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -17,14 +17,19 @@
   font-size: 0.8rem;
   letter-spacing: 2px;
   font-weight: 700;
-  color: $grey6;
+  color: var(--secondary);
 }
 
 .form-input {
-  border: 1px solid $grey8;
+  border: none;
   padding: 1em 1.2em;
   font-size: 0.8rem;
   border-radius: 3px;
+  background-color: var(--tiertiary);
+
+  &::placeholder {
+    color: var(--secondary);
+  }
 }
 
 .chat-send-form {
@@ -53,14 +58,14 @@
   font-family: 'Nunito', sans-serif;
   width: 100%;
   height: 300px;
-  border: 1px solid $grey8;
   border-radius: 5px;
   padding: 0.5em;
   color: $grey4;
   resize: vertical;
   line-height: 1.8em;
   font-size: 0.8rem;
-
+  background-color: var(--tiertiary);
+  border: none;
   &::placeholder {
     color: $grey7;
   }
