--- a/src/components/PostFetchComp/PostFetchComp.scss
+++ b/src/components/PostFetchComp/PostFetchComp.scss
@@ -5,7 +5,7 @@
 }
 
 .fetch-inputs {
-  background-color: white;
+  background-color: var(--highlight);
   border-radius: 5px;
   box-shadow: 0px 2px 10px rgba(black, 0.10);
   margin-bottom: 1em;
@@ -13,6 +13,10 @@
 
 .post-fetch-search {
   padding: 0.5em 1em;
+  
+  .form-label.dark {
+    color: var(--secondary)
+  }
 }
 
 .select__arrow {
@@ -26,17 +30,6 @@
   border-width: 8px 5px 0 5px;
   border-color: #7b7b7b transparent transparent transparent;
 
-}
-
-
-.current-subreddit {
-  display: flex;
-  background-color: $grey9;
-  color: $grey2;
-  padding: 1em;
-  border-radius: 8px;
-  box-shadow: 0px 2px 5px rgba(black, 0.3);
-  font-weight: 700;
 }
 
 .form-label.light {
