--- a/src/components/SelectField/SelectField.scss
+++ b/src/components/SelectField/SelectField.scss
@@ -5,7 +5,7 @@
   display: flex;
   width: 200px;
   height: 100%;
-  background-color: $grey9;
+  background-color: #CBD2D9;
   margin-right: 1em;
   padding: 5px 10px;
   border-radius: 3px;
