--- a/src/components/SubredditFilters/SubredditFilters.scss
+++ b/src/components/SubredditFilters/SubredditFilters.scss
@@ -1,7 +1,7 @@
 @import '../../colours';
 
 .filters-wrapper {
-  background: $grey10;
+  background: var(--tiertiary);
   padding: 0.5em 1em;
   min-height: 60px;
 }
