--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -30,7 +30,7 @@
 .post {
   width: 100%;
   height: auto;
-  background-color: white;
+  background-color: var(--highlight);
   border-radius: 5px;
   box-shadow: 0px 2px 3px rgba(black, 0.3);
   margin-bottom: 1em;
@@ -50,10 +50,10 @@
     }
   }
 
-  .title {
+  .subreddit-title {
     font-weight: bold;
     font-size: 1.2rem;
-    color: hsla(191, 41%, 34%,1);
+    color: var(--secondary);
   }
 }
 
@@ -78,10 +78,10 @@
 }
 
 .sub-detail {
-  background-color: $grey9;
+  background-color: var(--tiertiary);
   padding: 5px 20px;
   border-radius: 30px;
-  color: $grey3;
+  color: var(--secondary);
 }
 
 .post-flair {
@@ -123,7 +123,7 @@
   width: 100%;
   padding: 0.5em;
   div {
-    color: $grey4;
+    color: var(--secondary);
     font-size: 0.8rem;
     margin: 0 0.5em;
 
