--- a/src/index.scss
+++ b/src/index.scss
@@ -3,15 +3,42 @@
 @import './assets/styles/animate.css';
 @import './assets/normalize.css';
 
+.theme-dark {
+  --primary: #1F2933;
+  --secondary: white;
+  --tiertiary: #616E7C;
+  --accent-primary: #0967D2;
+  --highlight: #323F4B;
+  --accent-secondary: #0FB5BA;
+  --accent-alert: #DE3A11;
+  --accent-warning: #F35627;
+  --diff-primary: #FADB5F;
+  --success: #3EBD93;
+}
+
+.theme-light {
+  --primary:  white;
+  --secondary: #323F4B;
+  --tiertiary:#E4E7EB;
+  --highlight: white;
+  --accent-primary: #7CC4FA;
+  --accent-secondary: #0FB5BA;
+  --accent-alert: #DE3A11;
+  --accent-warning: #F35627;
+  --diff-primary: #FADB5F;
+  --success: #3EBD93;
+}
+
 body {
   margin: 0;
   padding: 0;
+  background-color: var(--primary);
   font-family: 'Muli', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color:#FAFAFA;
   * {
     box-sizing: border-box;
+    transition: all 0.2s ease-in-out;
   }
 }
 
@@ -34,6 +61,7 @@ p {
 p {
   line-height: 1.8em;
 }
+
 .external-link {
   color: $blue6;
 }
@@ -94,7 +122,7 @@ ul {
 }
 
 .highlight-text-dark {
-  color:$blue5;
+  color:var(--accent-primary);
   font-weight: bold;
 }
 
@@ -123,10 +151,14 @@ ul {
   width: 100%;
 }
 
+.current-subreddit {
+  color: var(--secondary);
+}
+
 .subtle {
   width: 100%;
   max-width: 600px;
-  color: $grey6;
+  color: var(--secondary);
 }
 
 
