--- a/src/layouts/NavWidget/NavWidget.scss
+++ b/src/layouts/NavWidget/NavWidget.scss
@@ -4,10 +4,12 @@
   height: 100%;
   min-width: 241px;
 
-  h5 {
-    width: 100%;
-  }
   &:hover .dropdown-wrapper  {
     display: flex;
+  }
+
+  .reddit-name {
+    width: 100%;
+    color: var(--secondary);
   }
 }
