--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -14,7 +14,7 @@
   top: 0;
   right: 0;
   z-index: 3;
-  background-color: var(--primary);
+  background-color: var(--highlight);
   align-items: center;
   padding: 0 1em;
   height: 75px;
