--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -6,7 +6,7 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   color: white;
   padding: 1em;
   font-size: 0.8rem;
-  transition: all 0.2s ease;
+   
   i { 
     margin-right: 10px;
   }
@@ -24,7 +24,7 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   text-transform: uppercase;
   white-space: nowrap;
   outline: none;
-  transition: all 0.2s ease;
+   
   height: 100%;
   font-size: 0.7rem;
 
@@ -39,7 +39,7 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   padding: 1em;
   font-size: 0.7rem;
   color: hsla(201, 87%, 54%,1);
-  transition: all 0.2s ease;
+   
 
   &:hover {
     background-color: hsla(201, 87%, 54%,1);
@@ -54,7 +54,7 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   box-shadow: none;
   padding: 1em;
   margin-left: 0.5em;
-  transition: all 0.2s ease;
+   
   background-color: var(--highlight);
   border-radius:5px;
   border:1.5px solid transparent;
@@ -93,7 +93,7 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   font-size: 1rem;
   box-shadow: none;
   background-color: white;
-  transition: all 0.2s ease;
+   
 
   &:hover {
     background-color: $grey8;
@@ -108,7 +108,7 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   background: rgb(62,189,147);
   background: linear-gradient(31deg, rgba(62,189,147,1) 0%, rgba(31,214,154,1) 100%);
   color: white;
-  transition: all 0.2s ease;
+   
   border: none;
   box-shadow: 0px 2px 10px rgba(black, 0.2);
   &:hover {
@@ -150,7 +150,6 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
 }
 
 .chat-action {
-  background-color: white;
   border: none;
   padding: 1em;
   margin:0 1em;
@@ -158,7 +157,7 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
   text-transform: uppercase;
   font-weight: bold;
   color: $grey4; 
-  transition: all 0.2s ease;
+   
   outline: none;
   font-size: 0.6rem;
 }
@@ -170,7 +169,8 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
 }
 
 .chat-action.primary {
-  background-color: $grey9;
+  background-color: var(--tiertiary);
+  color: var(--secondary);
 }
 
 .chat-action.danger {
@@ -188,7 +188,7 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
   border: none;
   text-transform: uppercase;
   font-weight: bold;
-  color: $blue5;
+  color: var(--accent-primary);
   font-size: 0.7rem;
 
   i {
