--- a/src/components/ContactsList/ContactsList.scss
+++ b/src/components/ContactsList/ContactsList.scss
@@ -12,29 +12,32 @@
   display: flex;
   flex-direction: column;
   margin: 1em;
-  transition: all 0.2s ease;
+   
   position: relative;
   width: 300px;
   min-height: 300px;
   border-radius: 8px;
   overflow: hidden;
-  background: white;
+  background: var(--highlight);
   box-shadow: 0px 2px 15px rgba(black, 0.2);
 }
 
 .contact-item-header {
-  background: $grey2;
+  background: var(--secondary);
   width: 100%;
   padding: 1em;
 
   h2 {
-    color: white;
+    color: var(--primary);
   }
 }
 
 .contact-list-item-body {
   padding: 0.5em;
   flex: 1;
+  p {
+    color: var(--secondary);
+  }
 }
 
 .contact-list-name {
@@ -46,6 +49,8 @@
 .contact-actions {
   width: 100%;
   align-items: center;
+  padding: 0 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .contact-actions  {
@@ -56,12 +61,12 @@
     width: 100%;
     height: 40px;
     padding: 0.5em;
-    margin: 0.5em;
+    margin-right: 0.5em;
     border-radius: 8px;
     color: $grey4;
     font-weight: 700;
     text-decoration: none;
-    transition: all 0.2s ease;
+     
     &:hover {
       background: $green;
       color: white;
@@ -78,7 +83,7 @@
     padding: 1em;
     background: $grey10;
     border-radius: 50%;
-    transition: all 0.2s ease;
+     
     &:hover {
       background: $accent;
       color: white;
