--- a/src/layouts/DashboardTopbar/DashboardTopbar.scss
+++ b/src/layouts/DashboardTopbar/DashboardTopbar.scss
@@ -2,12 +2,12 @@
 
 .dashboard-topbar {
   height: 60px;
-  background-color: white;
-  border-bottom: 1px solid $grey9;
+  background-color: var(--highlight);
   width: 100%;
   padding: 0.5em 1em;
   align-items: center;
   display: flex;
+  border-bottom: 2px solid var(--tiertiary);
 }
 
 .profile-image.small {
@@ -24,7 +24,7 @@
 .dash-nav-toggle {
   width: 30px;
   height: 40px;
-  transition: all 0.2s ease;
+   
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,7 +36,7 @@
     height: 3px;
     box-shadow: 0px 0px 3px rgba(black, 0.2);
       margin: 3px 0;
-    background-color: $grey2;
+    background-color: var(--secondary);
   }
 }
 
