--- a/src/components/InboxChat/InboxChat.scss
+++ b/src/components/InboxChat/InboxChat.scss
@@ -13,7 +13,7 @@
   margin: 0.5em;
   border-radius: 10px;
   line-height: 1.8em;
-  word-break: break-all;
+  word-wrap: normal;
 }
 
 .chat-body-dark {
