--- a/src/Pages/Dashboard/Inbox/Inbox.scss
+++ b/src/Pages/Dashboard/Inbox/Inbox.scss
@@ -5,11 +5,11 @@
   
   a {
     text-decoration: none;
-    color: $grey4;
+    color: var(--secondary);
   }
 
   i {
-    color: $grey6;
+    color: var(--secondary);
     font-size: 0.8rem;
   }
 }
