--- a/src/components/InboxMessage/InboxMessage.scss
+++ b/src/components/InboxMessage/InboxMessage.scss
@@ -14,6 +14,12 @@
   color: white;
 }
 
+.inbox-message-header {
+  h2, p {
+    color: var(--secondary);
+  }
+}
+
 @media screen and (max-width: 623px) {
   .message-tags {
     flex-direction: column;
