--- a/src/Pages/AccountPage/AccountPage.scss
+++ b/src/Pages/AccountPage/AccountPage.scss
@@ -4,6 +4,10 @@
   height: 100%;
   padding: 1em;
   margin-bottom: 3em;
+
+  > h1 {
+    color: var(--secondary);
+  }
 }
 .default-message {
   width: 100%;
@@ -26,10 +30,10 @@
 
 .default-message-holder {
   white-space: pre-wrap;
-  background-color: $grey10;
+  background-color: var(--tiertiary);
   padding: 0.5em;
   border-radius: 0.5em;
-  border: 1px solid $grey9;
+  color: var(--secondary);
 }
 
 
