finish up dark mode ish

--- a/src/Webbuilder/Dashboard/SiteIndex/SiteIndex.scss
+++ b/src/Webbuilder/Dashboard/SiteIndex/SiteIndex.scss
@@ -5,6 +5,7 @@
   border-radius: 5px;
   overflow: hidden;
   border: 1.5px solid $grey7;
+  background-color: var(--secondary);
 }
 .preffix,
 .suffix {
