--- a/src/layouts/SiteSaveStatus/SiteSaveStatus.scss
+++ b/src/layouts/SiteSaveStatus/SiteSaveStatus.scss
@@ -6,6 +6,7 @@
   border-radius: 5px;
   box-shadow: 0px 2px 15px rgba(black, 0.2);
   p {
+    color: var(--secondary);
     font-weight: 700;
   }
 }
