--- a/src/layouts/Preferences/Preferences.scss
+++ b/src/layouts/Preferences/Preferences.scss
@@ -27,3 +27,11 @@
     }
   }
 }
+
+.preferences-wrapper {
+  width: 100%;
+  max-width: 1300px;
+  justify-content: flex-start;
+  padding-left: 36px;
+  padding-right: 36px;
+}
