--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -73,7 +73,7 @@
   .topbar-account-widget {
     display: flex !important;
     height: auto;
-    background-color: white;
+    background-color: var(--highlight);
     padding: 1em;
     border: none;
     border-radius: 5px;
