--- a/src/layouts/Preferences/Preferences.scss
+++ b/src/layouts/Preferences/Preferences.scss
@@ -2,7 +2,7 @@
   border: none;
   background: transparent;
   position: relative;
-  width: 200px;
+  width: fit-content;
   outline: none;
   > img {
     height: 30px;
