--- a/src/layouts/Preferences/Preferences.scss
+++ b/src/layouts/Preferences/Preferences.scss
@@ -23,6 +23,7 @@
       background: rgb(255,255,255);
       background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(50,50,50,0) 100%);
       -webkit-background-clip: text;
+      background-clip: text;
 
     }
   }
