--- a/src/components/UserInbox/UserInbox.scss
+++ b/src/components/UserInbox/UserInbox.scss
@@ -29,16 +29,19 @@
 }
 
 .inbox-item {
-  background-color: white;
+  background-color: var(--highlight);
   padding: 1.5em;
   margin-bottom: 1.5em;
   border-radius: 5px;
   opacity: 0.5;
    
+  &:hover {
+    opacity: 1;
+  }
 }
 
 .inbox-item-img {
-  color: $blue4;
+  color: var(--accent-primary);
   font-size: 1.1rem;
 }
 
