--- a/src/layouts/DashboardNav/DashboardNav.scss
+++ b/src/layouts/DashboardNav/DashboardNav.scss
@@ -40,6 +40,7 @@
   margin: 0.5em;  
   padding: 0.3em;
   border-radius: 20px;
+  opacity: 0.7;
   p {
     white-space: nowrap;
     color: var(--secondary);
@@ -49,12 +50,17 @@
   i {
     margin-right: 1em;
   }
+
+  &:hover {
+    opacity: 1;
+  }
 }
 
 .dash-nav-item-active  {
   background: rgb(21,100,135);
   background: linear-gradient(45deg, rgba(21,100,135,1) 0%, rgba(60,108,237,1) 100%);
   box-shadow: 0px 2px 10px rgba($blue3, 0.5);
+  opacity: 1;
   p, 
   i {
     color: white;
