--- a/src/components/ConfirmMessages/ConfirmMessages.scss
+++ b/src/components/ConfirmMessages/ConfirmMessages.scss
@@ -61,9 +61,11 @@
   .account-tab {
     margin: 0;
   }
+  .confirm-messages-wrapper {
+    button {
+      width: 100%;
+    }
 
-  button {
-    width: 100%;
   }
 }
 
