--- a/src/components/YouTubeStats/YouTubeStats.scss
+++ b/src/components/YouTubeStats/YouTubeStats.scss
@@ -41,7 +41,7 @@
 
   > h5 {
     font-size: 1rem;
-    background-color: white;
+    background-color: var(--highlight);
     padding: 5px;
     border-radius: 5px;
     box-shadow: 0px 1px 10px rgba(black, 0.1);
