--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -3,9 +3,10 @@
 .subreddit-title {
   text-overflow: ellipsis;
   height: 90px;
-  width: 95%;
+  width: 100%;
   font-weight: 600;
   font-size: 1.2rem;
+  padding: 0.5em;
 }
 
 .post-actions {
