--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -68,15 +68,15 @@
     }
 }
 
-.reading-list-header {
+.reading-list-filter {
   text-transform: capitalize;
-  padding: 0.4em 0.9em;
   color: var(--secondary);
   border: none;
-  background-color: var(--tiertiary);
-  margin: 0.5em;
+  background-color: var(--highlight);
   border-radius: 20px;
   outline: none;
+  padding: 0.4em 0.9em;
+  margin: 0.5em;
   &.active {
     background-color: var(--success);
     color: var(--primary);
