--- a/src/components/AutoComplete/AutoComplete.scss
+++ b/src/components/AutoComplete/AutoComplete.scss
@@ -14,7 +14,8 @@
 .autocomplete-item {
   padding: 0.8em 0.8em;
   background-color: white;
-   
+  transition: all 0.2s ease;
+
   &:hover {
     background-color: $grey10;
     cursor: pointer;
