--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -6,7 +6,8 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   color: white;
   padding: 1em;
   font-size: 0.8rem;
-   
+  transition: all 0.2s ease;
+
   i { 
     margin-right: 10px;
   }
@@ -39,7 +40,8 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   padding: 1em;
   font-size: 0.7rem;
   color: hsla(201, 87%, 54%,1);
-   
+  transition: all 0.2s ease;
+
 
   &:hover {
     background-color: hsla(201, 87%, 54%,1);
@@ -54,7 +56,8 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   box-shadow: none;
   padding: 1em;
   margin-left: 0.5em;
-   
+  transition: all 0.2s ease;
+
   background-color: var(--highlight);
   border-radius:5px;
   border:1.5px solid transparent;
@@ -75,6 +78,8 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   border: 2px solid $accent;
   color: $accent;
   background-color: var(--highlight);
+  transition: all 0.2s ease;
+
   &:hover {
     background-color: $accent;
     color: white;
@@ -94,6 +99,7 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   box-shadow: none;
   background-color: white;
    
+  transition: all 0.2s ease;
 
   &:hover {
     background-color: $grey8;
@@ -108,7 +114,8 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
   background: rgb(62,189,147);
   background: linear-gradient(31deg, rgba(62,189,147,1) 0%, rgba(31,214,154,1) 100%);
   color: white;
-   
+  transition: all 0.2s ease;
+
   border: none;
   box-shadow: 0px 2px 10px rgba(black, 0.2);
   &:hover {
@@ -178,6 +185,8 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
   color: $accent;
   border-radius:5px;
   border-bottom: 2px solid transparent;
+  transition: all 0.2s ease;
+
   &:hover {
     border-bottom: 2px solid $accent;
   }
