--- a/src/components/ContactsList/ContactsList.scss
+++ b/src/components/ContactsList/ContactsList.scss
@@ -66,7 +66,8 @@
     color: $grey4;
     font-weight: 700;
     text-decoration: none;
-     
+    transition: all 0.2s ease;
+
     &:hover {
       background: $green;
       color: white;
@@ -83,7 +84,8 @@
     padding: 1em;
     background: $grey10;
     border-radius: 50%;
-     
+    transition: all 0.2s ease;
+
     &:hover {
       background: $accent;
       color: white;
