--- a/src/components/SelectField/SelectField.scss
+++ b/src/components/SelectField/SelectField.scss
@@ -37,7 +37,8 @@
 .select-item {
   padding: 0.5em;
   cursor: pointer;
-   
+  transition: all 0.2s ease;
+
 
   &:hover {
     background-color: $grey10;
