--- a/src/layouts/DashboardNav/DashboardNav.scss
+++ b/src/layouts/DashboardNav/DashboardNav.scss
@@ -35,7 +35,8 @@
   display: flex;
   align-items: center;
   margin: 0.2em 0;
-   
+  transition: all 0.2s ease;
+
   text-decoration: none;
   margin: 0.5em;  
   padding: 0.3em;
