--- a/src/layouts/NavWidget/NavWidget.scss
+++ b/src/layouts/NavWidget/NavWidget.scss
@@ -3,6 +3,7 @@
   position: relative;
   height: 100%;
   min-width: 241px;
+  transition: all 0.2s ease;
 
   &:hover .dropdown-wrapper  {
     display: flex;
