--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -38,8 +38,10 @@
   }
   
   li {
+    transition: all 0.2s ease;
+
     &:hover {
-      background-color: var(--highlight);
+      background-color: var(--primary);
     }
   }
 }
@@ -115,6 +117,8 @@
   height: 100%;
   padding-left: 1em;
   margin-left: 0.5em;
+  transition: all 0.2s ease;
+
   &:hover .dashboard-dropdown  {
     display: flex;
   }
@@ -146,6 +150,8 @@
   margin-right: 1em;
   display: flex;
   justify-content: center;
+  transition: all 0.2s ease;
+
   a {
     color: white;
     text-decoration: none;
