fixing how state is handled and triggering save

--- a/src/Webbuilder/Dashboard/Forms/Forms.scss
+++ b/src/Webbuilder/Dashboard/Forms/Forms.scss
@@ -1,6 +1,7 @@
 .form-preview {
   margin: 3em;
   width: 100%;
+  max-width: 600px;
   display: flex;
   flex-direction: column;
   text-align: center;
