--- a/src/Webbuilder/Static/Static.scss
+++ b/src/Webbuilder/Static/Static.scss
@@ -134,6 +134,19 @@
   height: 100%;
 }
 
+.static-nav-link {
+  width: 100%;
+  display: flex;
+  color: var(--secondary);
+  text-decoration: none;
+  font-weight: 400;
+  padding: 0.5em;
+  transition: all 0.2s ease;
+  &:hover {
+    background-color: var(--primary);
+  }
+}
+
 @media screen and (max-width: 768px) {
   .static-intro-wrapper {
     padding: 1em;
