--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -26,7 +26,7 @@
   font-size: 0.8rem;
   border-radius: 3px;
   background-color: var(--tiertiary);
-
+  line-height: 1.8em;
   &::placeholder {
     color: var(--secondary);
   }
