--- a/src/components/NewVisitor/NewVisitor.scss
+++ b/src/components/NewVisitor/NewVisitor.scss
@@ -3,7 +3,7 @@
 .new-visitor-wrapper {
   position: fixed;
   bottom: 2em;
-  background-color: var(--primary);
+  background-color: var(--highlight);
   padding: 1em;
   border: 2px solid $green;
   border-radius: 10px;
