--- a/src/Webbuilder/Static/StorySubmission/StorySubmission.scss
+++ b/src/Webbuilder/Static/StorySubmission/StorySubmission.scss
@@ -13,6 +13,8 @@
   .headline {
     color: var(--secondary);
   }
+
+  
 }
 
 .ql-toolbar.ql-snow {
@@ -24,5 +26,18 @@
   * {
     color: #2E2E2E;
 
+  }
+}
+
+#preview-body {
+  * {
+    color: var(--secondary);
+  }
+
+  ul {
+    padding-left: 1.5em;
+    li {
+      list-style: disc;
+    }
   }
 }
