fix some bugs in inbox

--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -77,7 +77,7 @@
   background-color: var(--tiertiary);
   font-size: 0.8rem;
   padding:1em;
-  color: var(--primary);
+  color: var(--secondary);
 
   &::placeholder {
     color: var(--secondary);
