rwd submitted storie

--- a/src/Pages/SubmittedStories/SubmittedStories.scss
+++ b/src/Pages/SubmittedStories/SubmittedStories.scss
@@ -2,5 +2,10 @@
 .submitted-stories {
   display: grid;
   width: 100%;
+}
+
+.grid-wrapper {
   max-width: 1200px;
+  overflow-x: scroll;
+  min-width: 700px;
 }
