--- a/src/Webbuilder/Static/StorySubmission/StorySubmission.scss
+++ b/src/Webbuilder/Static/StorySubmission/StorySubmission.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   margin: 3em auto;
+  padding: 0.5em;
   &.dark {
     background-color: var(--primary);
   }
