--- a/src/Webbuilder/Dashboard/Forms/Forms.scss
+++ b/src/Webbuilder/Dashboard/Forms/Forms.scss
@@ -1,6 +1,5 @@
 .form-preview {
   margin: 3em;
-  width: 100%;
   max-width: 600px;
   display: flex;
   flex-direction: column;
@@ -41,5 +40,15 @@
     font-size: 0.9rem;
     margin-left: 5px;
     margin-top: 3px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .submission-form-wrapper {
+    flex-direction: column;
+
+    .form-preview {
+      margin: 0.5em;
+    }
   }
 }
