--- a/src/Webbuilder/Dashboard/SiteIndex/SiteIndex.scss
+++ b/src/Webbuilder/Dashboard/SiteIndex/SiteIndex.scss
@@ -45,3 +45,32 @@
   height: 800px;
 }
 
+
+
+@media screen and (max-width: 375px) {
+  .site-index-header {
+    flex-direction: column;
+    align-items: center;
+
+    h1 {
+      margin: 0;
+      margin-bottom: 0.5em;
+    }
+  }
+
+  .share-wrapper {
+    display: flex;
+    width: fit-content;
+    margin: 0.5em auto;
+    text-align: center;
+  }
+  
+} 
+
+@media screen and (max-width: 425px) {
+  .subdomain-wrapper {
+    .suffix {
+      display: none;
+    }
+  }
+}
