--- a/src/Webbuilder/Dashboard/Forms/Forms.scss
+++ b/src/Webbuilder/Dashboard/Forms/Forms.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  
+  width: 100%;
   #preview-body {
     color: var(--secondary);
     text-align: left;
