--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -106,7 +106,35 @@
   }
 }
 
+.selftext-wrapper {
+  position: relative;
+  p {
+    white-space: pre-wrap;
+    height: 100px;
+    overflow: hidden;
+    margin-top: 2em;
+  }
 
+  &::after {
+    background: rgb(255,255,255);
+background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(50,50,50,0) 100%);
+    position: absolute;
+    content: '';
+    display: flex;
+    height: 100%;
+    width: 100%;
+    bottom: 0;
+  }
+}
+
+.selftext-expand {
+  #selfText {
+    height: 100% !important;
+  }
+  &::after {
+    display: none;
+  }
+}
 
 @media screen and (max-width: 768px) {
   .mobile-column {
