--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -117,7 +117,7 @@
 
   &::after {
     background: rgb(255,255,255);
-background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(50,50,50,0) 100%);
+background: linear-gradient(0deg, var(--highlight) 0%, rgba(50,50,50,0) 100%);
     position: absolute;
     content: '';
     display: flex;
