added a little ux changes to inbox message

--- a/src/components/InboxMessage/InboxMessage.scss
+++ b/src/components/InboxMessage/InboxMessage.scss
@@ -15,11 +15,19 @@
 }
 
 .inbox-message-header {
-  h2, p {
+  h2, 
+  p,
+  a {
     color: var(--secondary);
   }
 }
 
+.message-subtitle {
+  a {
+    color: var(--secondary);
+  margin-top: 0.5em;
+  }
+}
 @media screen and (max-width: 623px) {
   .message-tags {
     flex-direction: column;
