--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -49,7 +49,6 @@
 .extended {
   display: flex !important;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   position: fixed;
   top: 0;
@@ -57,13 +56,13 @@
   left: 0;
   bottom: 0;
   background-color: rgba($grey1, 0.9);
-  
+  overflow: auto;
+  padding: 5em 0;
   .nav-link {
    font-size: 2rem;
    margin-bottom: 1em; 
 
    a {
-    color: white;
     text-decoration: none;
    }
   }
@@ -164,6 +163,86 @@
 
 .mobile-navbar-wrapper {
   display: none;
+}
+
+.mobile-navbar {
+  .nav-link {
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    background-color: var(--tiertiary);
+    border-radius: 5px;
+    a { 
+      color: var(--secondary);
+
+      padding: 0.5em;
+    }
+  }
+
+  .nav-dropdown {
+    &:hover {
+      justify-content: space-between;
+      width: 100% !important;
+    }
+
+    .nav-item-dropdown {
+      width: 100%;
+    }
+  }
+}
+
+.nav-dropdown {
+  transition: all 0.2s ease;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  * {
+    transition: all 0.2s ease;
+  }
+  i {
+    color: var(--secondary);
+  }
+
+ .nav-dropdown-label {
+  color: var(--secondary);
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+   p {
+    display: none;
+
+   }
+ }
+
+  .nav-item-dropdown {
+    display: none;
+    flex-direction: column;
+    background-color: var(--highlight);
+    width: 200px;
+    border-radius: 5px;
+    box-shadow: 0px 3px 15px rgba(black, 0.3);
+    padding: 0.5em;
+  }
+  
+  &:hover {
+    width: 200px;
+    .nav-item-dropdown {
+      display: flex;
+    }
+
+    .nav-dropdown-label {
+      justify-content: space-between;
+      p {
+        display: block;
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 841px) {
