--- a/src/layouts/NavWidget/NavWidget.scss
+++ b/src/layouts/NavWidget/NavWidget.scss
@@ -4,7 +4,7 @@
   height: 100%;
   min-width: 241px;
   transition: all 0.2s ease;
-
+  width: 100%;
   &:hover .dropdown-wrapper  {
     display: flex;
   }
