--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -115,7 +115,6 @@
   position: relative;
   height: 100%;
   padding-left: 1em;
-  margin-left: 0.5em;
   transition: all 0.2s ease;
 
   &:hover .dashboard-dropdown  {
@@ -145,8 +144,6 @@
 .nav-main-btn {
   background-color: $blue7;
   border-radius: 5px;
-  margin-left: 1em;
-  margin-right: 1em;
   display: flex;
   justify-content: center;
   transition: all 0.2s ease;
@@ -166,6 +163,7 @@
 }
 
 .mobile-navbar {
+  width: 90%;
   .nav-link {
     display: flex;
     justify-content: center;
@@ -228,6 +226,7 @@
     border-radius: 5px;
     box-shadow: 0px 3px 15px rgba(black, 0.3);
     padding: 0.5em;
+    
   }
   
   &:hover {
@@ -245,6 +244,15 @@
   }
 }
 
+.desktop.nav-dropdown {
+  position: relative;
+
+  .nav-item-dropdown {
+    position: absolute;
+    right: 0;
+    top: 40px;
+  }
+}
 @media screen and (min-width: 841px) {
   .nav-toggle {
     display: none;
