working on nav some more

--- a/src/layouts/Preferences/Preferences.scss
+++ b/src/layouts/Preferences/Preferences.scss
@@ -3,7 +3,7 @@
   background: transparent;
   position: relative;
   outline: none;
-
+  width: 100%;
   > p {
     margin-top: -1px;
     z-index: 1;
