--- a/src/layouts/NavWidget/NavWidget.scss
+++ b/src/layouts/NavWidget/NavWidget.scss
@@ -1,3 +1,4 @@
+@import '../../colours.scss';
 
 .topbar-account-widget {
   position: relative;
@@ -5,6 +6,8 @@
   min-width: 241px;
   transition: all 0.2s ease;
   width: 100%;
+  display: flex;
+  flex-direction: column;
   &:hover .dropdown-wrapper  {
     display: flex;
   }
@@ -12,5 +15,86 @@
   .reddit-name {
     width: 100%;
     color: var(--secondary);
+  }
+}
+
+.dashboard-topbar {
+  height: 60px;
+  background-color: var(--highlight);
+  width: 100%;
+  padding: 0.5em 1em;
+  align-items: center;
+  display: flex;
+  border-bottom: 2px solid var(--tiertiary);
+}
+
+.profile-image.small {
+  border-radius: 3px;
+  width: 30px;
+  height: 30px;
+}
+
+.topbar-dropdown-toggle {
+  color: $grey6;
+}
+
+
+.dash-nav-toggle {
+  width: 30px;
+  height: 40px;
+   
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $grey4;
+  flex-direction: column;
+
+  .toggle-line {
+    width: 100%;
+    height: 3px;
+    box-shadow: 0px 0px 3px rgba(black, 0.2);
+      margin: 3px 0;
+    background-color: var(--secondary);
+  }
+}
+
+.dropdown-wrapper {
+  width: 100%;
+  display: none;
+  padding-top:2.5em;
+  z-index:2;
+  margin-top: 0;
+}
+
+@media screen and (min-width: 769px) {
+  .topbar-account-widget {
+    .dropdown-wrapper {
+      position: absolute;
+      top: 0;
+  
+    }
+  
+    
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .dashboard-topbar {
+    position: fixed;
+    top: 0;
+    z-index: 3;
+  }
+  .dash-nav-toggle {
+    position: relative;
+    z-index: 4;
+  }
+}
+
+@media screen and (max-width: 841px) {
+  .topbar-account-widget {
+    display: none !important;
+  }
+  .dropdown-wrapper {
+    padding-top: 0;
   }
 }
