--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -174,7 +174,7 @@
     border-radius: 5px;
     a { 
       color: var(--secondary);
-
+      width: 100%;
       padding: 0.5em;
     }
   }
@@ -226,7 +226,7 @@
     border-radius: 5px;
     box-shadow: 0px 3px 15px rgba(black, 0.3);
     padding: 0.5em;
-    
+    margin-top: 0.5em;
   }
   
   &:hover {
